# rpass-cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  cliff.toml  dist-workspace.toml  flake.nix  release-plz.toml
.github/workflows/: audit.yml  release-plz.yml  release.yml  rust.yml
completions/: _rpass  rpass.bash  rpass.fish  rpass.ps1
docs/: import.md
src/: cli.rs  lib.rs  main.rs  password_generator.rs
src/cli/: completion.rs  tree_output.rs
src/password_store/: decrypted_entry.rs  doctor.rs  edit_entry.rs  entry_name.rs  git.rs  gpg.rs  import.rs  init_store.rs  insert_entry.rs  list_entries.rs  mod.rs  move_entry.rs  otp.rs  recipients.rs  remove_entry.rs  search_entries.rs  show_entry.rs  store_directory.rs
src/password_store/importer/: bitwarden.rs  mod.rs
tests/: complete_entries_command.rs  doctor_command.rs  edit_command.rs  generate_command.rs  git_auto_commit_command.rs  git_command.rs  help_command.rs  init_command.rs  insert_command.rs  list_command.rs  mv_command.rs  otp_command.rs  recipients_command.rs  rm_command.rs  search_command.rs  show_command.rs  version_command.rs  write_compatibility_fixtures.rs
tests/support/: mod.rs
wix/: main.wxs
