[package]
name = "rpass-cli"
version = "0.1.11"
edition = "2024"
authors = ["rxtsel"]
description = "Native password-store compatible backend"
repository = "https://github.com/rxtsel/rpass-cli"

[package.metadata.wix]
upgrade-guid = "694EFC21-7422-4882-912D-65A6F84315EC"
path-guid = "4FC40D79-8BEA-4CE3-BEA1-B51BE50A26B6"
license = false
eula = false

[lib]
name = "rpass"
path = "src/lib.rs"

[[bin]]
name = "rpass"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
memorable-wordlist = "0.1.7"
rand = "0.8.5"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
totp-rs = { version = "5.7.1", features = ["otpauth"] }
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
